--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -96,6 +96,7 @@
                                 <li>@Html.ActionLink("Captura de abonos", "Index", "Cobranza")</li>
                                 <li>@Html.ActionLink("Crédito recuperado", "CreditoRecuperado", "Cobranza")</li>
                                 <li>@Html.ActionLink("Cartera vencida", "CarteraVencida", "Cobranza")</li>
+                                <li>@Html.ActionLink("Factura global", "FacturacionGlobal", "Cobranza")</li>
                             </ul>
                         </li>
                         <li class="menu_dark"><a href="@Url.Action("Index", "Pedidos")"><i class="material-icons"> phone </i><span class="icon-name">Call Center</span> </a></li>
