--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/YearsDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/YearsDTO.cshtml
@@ -1,7 +1,7 @@
-﻿
-@{
-    ViewBag.Title = "YearsDTO";
-}
+﻿@model MVC.Presentacion.Models.Historico.HistoricoVentasConsulta
+@Html.HiddenFor(x => x.Years)
 
-<h2>YearsDTO</h2>
+<tr>
+
+</tr>
 
