JSA - Avance facturacion global

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Index.cshtml
@@ -89,22 +89,23 @@
                                 </div>
                             </div>
                             <br />
-                            <div class="row clearfix blockquote blockquote-info btn-round">
-                                <div class="table-responsive">
-                                    <table class="table table-striped table-hover">
-                                        <thead>
-                                            <tr>
-
-                                                <th>Ticket</th>
-                                                <th>Importe</th>
-                                                <th>RFC</th>
-                                                <th>Seleccionar</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            @Html.EditorFor(x => x.Tickets)
-                                        </tbody>
-                                    </table>
+                            <div class="row clearfix">
+                                <div class="blockquote blockquote-info btn-round">
+                                    <div class="table-responsive">
+                                        <table class="table table-striped table-hover">
+                                            <thead>
+                                                <tr>
+                                                    <th>Ticket</th>
+                                                    <th>Importe</th>
+                                                    <th>RFC</th>
+                                                    <th>Seleccionar</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                @Html.EditorFor(x => x.Tickets)
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                             </div>
                         </div>
