--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/FacturacionGlobal.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/FacturacionGlobal.cshtml
@@ -9,34 +9,6 @@
             new Script { ExtensionSuite = ExtensionSuite.Editors },
             new Script { ExtensionSuite = ExtensionSuite.GridView }
         )
-@functions{
-    protected void PrepareDateEditSettings(MVCxFormLayoutItem item)
-    {
-        item.NestedExtension().DateEdit(date =>
-        {
-            date.ShowModelErrors = true;
-            date.Properties.ClientSideEvents.DateChanged = "UpdateInfo";
-            date.Properties.ValidationSettings.Display = Display.Dynamic;
-            date.Properties.ValidationSettings.SetFocusOnError = true;
-            date.Properties.ValidationSettings.ErrorDisplayMode = ErrorDisplayMode.ImageWithTooltip;
-            date.Properties.ValidationSettings.CausesValidation = true;
-            date.Properties.CalendarProperties.Columns = 2;
-            date.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
-        });
-    }
-}
-@section AdditionalResources {
-    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.vali date.unobtrusive.min.js")" type="text/javascript"></script>
-    <style type="text/css">
-        .pickerGroupContainer,
-        .pickerFormLayout > .dxflGroupSys {
-            padding-left: 0 !important;
-        }
-    </style>
-}
-
-
 <html>
 <head>
     <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
@@ -48,10 +20,24 @@
             $(window).on("load", showNotification(tipo, mensaje, 'top', 'center', '', ''));
         }
     </script>
+    <script>
+        $(document).ready(function () {
+            $("#ok").click(function () {
+                var valores = "";
+                $(".numero").parent("tr").find("td").each(function () {
+                    if ($(this).html() != "coger valores de la fila") {
+                        valores += $(this).html() + " ";
+                    }
+                });
 
+                valores = valores + "\n";
+                alert(valores);
+            });
+        });
+    </script>
 </head>
 <body>
-    @using (Html.BeginForm("Buscar", "Facturacion", FormMethod.Post))
+    @using (Html.BeginForm())
     {
         <section class="content home">
             <div class="container-fluid">
@@ -84,26 +70,37 @@
                     <div class="card">
                         <div class="body">
                             <div class="row clearfix">
-                                <div class="col-md-5">
-                                    @Html.DevExpress().FormLayout(settings =>
-                               {
-                                   settings.Name = "RangoFechas";
-                                   settings.RequiredMarkDisplayMode = RequiredMarkMode.None;
-                                   settings.SettingsItemCaptions.Location = LayoutItemCaptionLocation.Top;
-                                   settings.ControlStyle.CssClass = "pickerFormLayout";
-                                   settings.UseDefaultPaddings = false;
-                                   settings.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
-                                   settings.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 600;
-                                   var pickerGroup = settings.Items.AddGroupItem(i =>
-                                   {
-                                       i.ColCount = 2;
-                                       i.UseDefaultPaddings = false;
-                                       i.GroupBoxDecoration = GroupBoxDecoration.None;
-                                   });
-                                   pickerGroup.ParentContainerStyle.CssClass = "pickerGroupContainer";
-                                   pickerGroup.Items.Add(m => m.FechaIni , i => PrepareDateEditSettings(i));
-                                   pickerGroup.Items.Add(m => m.FechaFinal, i => PrepareDateEditSettings(i));
-                               }).GetHtml()
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <strong>Fecha inicial</strong>
+                                        @Html.DevExpress().DateEdit(settings =>
+                                       {
+                                           settings.Name = "FechaIni";
+                                           settings.Properties.UseMaskBehavior = true;
+                                           settings.Properties.EditFormat = EditFormat.Custom;
+                                           settings.Properties.EditFormatString = "dd/MM/yyyy hh:mm";
+                                           settings.Properties.NullText = "dd, MMMM yyyy";
+                                           settings.Properties.DisplayFormatString = "dd, MMMM yyyy";
+                                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                           settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
+                                       }).Bind(Model.FechaIni).GetHtml()
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <strong>Fecha Final</strong>
+                                        @Html.DevExpress().DateEdit(settings =>
+                                       {
+                                           settings.Name = "FechaFinal";
+                                           settings.Properties.UseMaskBehavior = true;
+                                           settings.Properties.EditFormat = EditFormat.Custom;
+                                           settings.Properties.EditFormatString = "dd/MM/yyyy hh:mm";
+                                           settings.Properties.NullText = "dd, MMMM yyyy";
+                                           settings.Properties.DisplayFormatString = "dd, MMMM yyyy";
+                                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                           settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
+                                       }).Bind(Model.FechaFinal).GetHtml()
+                                    </div>
                                 </div>
                                 <div class="col-md-2">
                                     <div class="form-group">
@@ -116,7 +113,7 @@
                                     <input type="submit" name="Buscar" value="Buscar" class="btn btn-raised btn-primary btn-round float-left" />
                                 </div>
                                 <div class="col-md-2" style="top:10px">
-                                    <button id="btnUpDate" formaction=@Url.Action("DatosCliente") class="btn btn-primary btn-icon-mini btn-round">
+                                    <button id="btnUpDate" formaction=@Url.Action("Facturar") class="btn btn-primary btn-icon-mini btn-round">
                                         Facturar
                                     </button>
                                 </div>
@@ -142,7 +139,75 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="header">Tus <strong>Facturas</strong></div>
+                        <div class="header"><strong>Factura Global</strong></div>
+                        <div class="body">
+                            <div class="row clearfix">
+                                <div class="row clearfix blockquote blockquote-info btn-round">
+                                    <div class="table-responsive">
+                                        <table class="table table-striped table-hover">
+                                            <thead>
+                                                <tr>
+                                                    <th><strong>#</strong></th>
+                                                    <th><strong>Ticket</strong></th>
+                                                    <th><strong>RFC</strong></th>
+                                                    <th><strong>Importe</strong></th>
+                                                    <th><strong>Accion</strong></th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                @if (Model.Tickets != null)
+                                                {
+                                                    foreach (var item in ViewBag.CFDIs)
+                                                    {
+                                                        <tr>
+                                                            <th></th>
+                                                            <th>@item.FolioVenta</th>
+                                                            <th>@item.RFC</th>
+                                                            <th class="importe">@item.VentaTotal</th>
+                                                            <th>
+                                                                <a href="@Url.Action(" Borrar", "Requisicion" , new { id=@item.FolioVenta })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    <i class="material-icons">delete</i>
+                                                                    <span>Eliminar</span>
+                                                                </a>
+                                                            </th>
+                                                        </tr>
+                                                    }
+                                                }
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row clearfix">
+                                <strong>Total de Factura Global</strong>
+                            </div>
+                            <div class="row clearfix">
+                                <div class="col-md-3">
+                                    <input type="submit" name="Facturar" value="Facturar" class="btn btn-raised btn-primary btn-round float-left" />
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-control">
+                                        <strong>SubTotal:</strong>
+                                        $ @Html.Label("lblSubTotal", "0.00", new { @class = "text-muted" });
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-control">
+                                        <strong>IVA(16%):</strong>
+                                        $ @Html.Label("lblIVA", "0.00", new { @class = "text-muted" });
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-control">
+                                        <strong>Total:</strong>
+                                        $ @Html.Label("lblTotal", "0.00", new { @class = "text-muted" });
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="header">Las <strong>Facturas globles </strong>generadas</div>
                         <div class="body">
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
