--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/FacturacionGlobal.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/FacturacionGlobal.cshtml
@@ -29,7 +29,6 @@
                         valores += $(this).html() + " ";
                     }
                 });
-
                 valores = valores + "\n";
                 alert(valores);
             });
@@ -113,8 +112,8 @@
                                     <input type="submit" name="Buscar" value="Buscar" class="btn btn-raised btn-primary btn-round float-left" />
                                 </div>
                                 <div class="col-md-2" style="top:10px">
-                                    <button id="btnUpDate" formaction=@Url.Action("Facturar") class="btn btn-primary btn-icon-mini btn-round">
-                                        Facturar
+                                    <button id="btnUpDate" formaction=@Url.Action("Agregar") class="btn btn-primary btn-icon-mini btn-round">
+                                        Agregar
                                     </button>
                                 </div>
                             </div>
@@ -125,7 +124,7 @@
                                         <thead>
                                             <tr>
                                                 <th>Ticket</th>
-                                                <th>Importe</th>
+                                                <th>Importe</th>nts
                                                 <th>RFC</th>
                                                 <th>Seleccionar</th>
                                             </tr>
@@ -155,7 +154,7 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                @if (Model.Tickets != null)
+                                                @if (TempData["TiketsAgregados"] != null)
                                                 {
                                                     foreach (var item in ViewBag.CFDIs)
                                                     {
